--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <div class="row mt-4">
   <div class="col-3">
+    <!-- Sidebar -->
     sidebar
   </div>
   <div class="col">
-    router
+    <!-- Nuestras paginas -->
+    <!-- <shared-home-page></shared-home-page> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
