--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="row mt-4">
   <div class="col-3">
     <!-- Sidebar -->
-    sidebar
+    <share-sidebar></share-sidebar>
+
   </div>
   <div class="col">
     <!-- Nuestras paginas -->
