--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <h2>Paises</h2>
 <hr />
 <ul class="list-group">
-  <li
+  <!-- <li
     routerLink=""
     routerLinkActive="active"
     [routerLinkActiveOptions]="{ exact: true }"
@@ -11,10 +11,10 @@
   </li>
   <li routerLink="about" routerLinkActive="active" class="list-group-item">
     About Page
-  </li>
-  <li routerLink="contact" routerLinkActive="active" class="list-group-item">
+  </li> -->
+  <!-- <li routerLink="contact" routerLinkActive="active" class="list-group-item">
     Contact Page
-  </li>
+  </li> -->
   <li routerLink="countries/by-capital" routerLinkActive="active" class="list-group-item">
     Por capital
   </li>
