Tarea pais y region realizada facil 122

--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -2,7 +2,7 @@
   *ngIf="countries.length === 0; else table"
   class="alert alert-warning text-center"
 >
-  No hay paises que mostrar
+  No hay nada que mostrar
 </div>
 
 <ng-template #table>
