--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,7 +6,7 @@
     <!-- Search Box -->
     <shared-search-box
       (onValue)="searchByCapital($event)"
-      placeholder="Este es un nuevo placeholder"
+      placeholder="Buscar por capital"
     ></shared-search-box>
   </div>
 </div>
