--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,16 +1,19 @@
-<h2>Por capital</h2>
-<hr>
+<h2>Por Pais</h2>
+<hr />
 
 <div class="row">
   <div class="col">
     <!-- Search Box -->
-    <shared-search-box placeholder="Este es un nuevo placeholder"></shared-search-box>
+    <shared-search-box
+      (onValue)="searchByCountry($event)"
+      placeholder="Buscar por pais"
+    ></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr>
-    tabla de resultados
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
