--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,6 +6,7 @@
     <!-- Search Box -->
     <shared-search-box
       (onDebounce)="searchByCapital($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar por capital"
     ></shared-search-box>
   </div>
@@ -13,7 +14,7 @@
 
 <div class="row">
   <div class="col">
-    <hr>
+    <hr />
     <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries"></countries-table>
   </div>
