--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -6,6 +6,7 @@
     <!-- Search Box -->
     <shared-search-box
       (onDebounce)="searchByCountry($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar por pais"
     ></shared-search-box>
   </div>
